# ainstein-ai

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_pipeline.py
app/: embedder.py  loader.py  logging_config.py  main.py  pipeline.py  preprocessor.py  retriever.py
